# SpecKit

./: .gitignore  ARCHITECTURE.md  BUILD_SPEC.md  LICENSE  Makefile  README.md  SPECKIT_BUILD_SPEC.md  SPEC_FORMAT.md  pyproject.toml
.claude/: launch.json
evals/: README.md  conftest.py  test_bias_swap.py  test_consistency.py  test_spec_lint.py
evals/fixtures/: biased_spec.md  sample_resume.md
hiring_manager_tools/: __init__.py  claude_client.py  cli.py  engine.py  mcp_server.py  registry.py  run_record.py
hiring_manager_tools/modules/: __init__.py  base.py  interview_prep.py  spec_lint.py
hiring_manager_tools/web/: __init__.py  app.py
hiring_manager_tools/web/static/: index.html
prompts/: README.md  interview_prep.md  spec_lint.md
scripts/: generate_library.py
speckit/: __init__.py  claude_client.py  cli.py  engine.py  mcp_server.py  registry.py  run_record.py  spec.py  validation.py
speckit/modules/: __init__.py  base.py  interview_prep.py  spec_lint.py
speckit/web/: __init__.py  app.py
speckit/web/static/: index.html
specs/hiring/: README.md  devops-lead.md  senior-frontend-platform.md
specs/review/: README.md
